--- a/Ghost Runner/storyBoard/SignUp.storyboard
+++ b/Ghost Runner/storyBoard/SignUp.storyboard
@@ -44,7 +44,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JcP-V2-CSG">
-                                <rect key="frame" x="20" y="302" width="374" height="45"/>
+                                <rect key="frame" x="20" y="314" width="374" height="45"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="uPv-V3-SgY"/>
@@ -57,16 +57,24 @@
                                     <action selector="continueSignUp" destination="6we-Bt-5a5" eventType="touchUpInside" id="850-kG-QX9"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WNZ-pa-MF9">
+                                <rect key="frame" x="20" y="230" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ZG4-Sz-k8j"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="WNZ-pa-MF9" firstAttribute="leading" secondItem="ZG4-Sz-k8j" secondAttribute="leading" constant="20" id="1mY-oo-9az"/>
+                            <constraint firstItem="WNZ-pa-MF9" firstAttribute="centerX" secondItem="qHc-Ny-4DG" secondAttribute="centerX" id="52j-2x-hhH"/>
                             <constraint firstItem="y3G-FK-bpA" firstAttribute="top" secondItem="MnN-Yg-ddh" secondAttribute="bottom" constant="50" id="CQE-ur-yUn"/>
-                            <constraint firstItem="JcP-V2-CSG" firstAttribute="top" secondItem="y3G-FK-bpA" secondAttribute="bottom" constant="80" id="Jih-pe-VXB"/>
                             <constraint firstItem="y3G-FK-bpA" firstAttribute="leading" secondItem="ZG4-Sz-k8j" secondAttribute="leading" constant="20" id="LR0-kb-I1p"/>
+                            <constraint firstItem="JcP-V2-CSG" firstAttribute="top" secondItem="WNZ-pa-MF9" secondAttribute="bottom" constant="50" id="MwT-93-7Jx"/>
                             <constraint firstItem="JcP-V2-CSG" firstAttribute="leading" secondItem="ZG4-Sz-k8j" secondAttribute="leading" constant="20" id="UbZ-Q6-52L"/>
                             <constraint firstItem="JcP-V2-CSG" firstAttribute="centerX" secondItem="qHc-Ny-4DG" secondAttribute="centerX" id="b34-90-CD2"/>
                             <constraint firstItem="90G-KN-4XB" firstAttribute="top" secondItem="ZG4-Sz-k8j" secondAttribute="top" id="ho1-sm-orM"/>
+                            <constraint firstItem="WNZ-pa-MF9" firstAttribute="top" secondItem="y3G-FK-bpA" secondAttribute="bottom" constant="8" symbolic="YES" id="hwd-LD-N2H"/>
                             <constraint firstItem="90G-KN-4XB" firstAttribute="leading" secondItem="ZG4-Sz-k8j" secondAttribute="leading" constant="20" id="j3Q-8E-FKL"/>
                             <constraint firstItem="y3G-FK-bpA" firstAttribute="centerX" secondItem="qHc-Ny-4DG" secondAttribute="centerX" id="lMR-gh-t9B"/>
                             <constraint firstItem="MnN-Yg-ddh" firstAttribute="leading" secondItem="ZG4-Sz-k8j" secondAttribute="leading" constant="20" id="mUY-7t-nhZ"/>
@@ -77,6 +85,7 @@
                         <outlet property="backButton" destination="90G-KN-4XB" id="3Zt-wi-FZu"/>
                         <outlet property="continueButton" destination="JcP-V2-CSG" id="ftc-bK-bUi"/>
                         <outlet property="emailField" destination="y3G-FK-bpA" id="tpQ-wu-4pm"/>
+                        <outlet property="passwordField" destination="WNZ-pa-MF9" id="gpL-mw-rkZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MLM-U3-eNX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
